Fix button spacing

--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -7,7 +7,7 @@
     margin-top: 20px;
 }
 .left-btn{
-	margin-left:40px;
+	margin-left:50px;
 }
 .h3-style{
 	margin-top: 10px;
@@ -21,7 +21,7 @@
     color: white;
     width: 41%;
     margin-bottom: 20px;
-    
+
     font-size: 20px!important;
 }
 .btn-standford{
@@ -33,4 +33,3 @@
 
     font-size: 20px!important;
 }
-
